Some more code. Added the resources and login functionality

--- a/smartalarm/smartalarm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/smartalarm/smartalarm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,15 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
-        <url-pattern>/webresources/*</url-pattern>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>cross-origin</filter-name>
+        <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cross-origin</filter-name>
+        <url-pattern>/rest/*</url-pattern>
+    </filter-mapping>
 </web-app>
